modules/au/audit_chain/1.9.x/agent/api/logging.md
<!-- SPDX-License-Identifier: GPL-2.0-or-later -->
# Writing to and verifying the chain (`AuditChainLoggerInterface`)

Service `audit_chain.logger` (class `Drupal\audit_chain\AuditChainLogger`, alias
`Drupal\audit_chain\AuditChainLoggerInterface`). Inject the interface; do not new it up.

## Appending entries

```php
\Drupal::service('audit_chain.logger')->log('personnel', 'field_read', [
  'entity_type' => 'node',
  'id' => $node->id(),
  'field' => 'field_salary',
]);
```

- **`log(string $channel, string $operation, array $metadata = []): void`** — appends one row.
  `channel` (consumer machine name) and `operation` are each truncated to 64 bytes. Of `$metadata`,
  the keys **`entity_type`, `bundle`, `id`, `label`** are promoted to indexed columns
  (`entity_id` = string of `id`, `entity_label` truncated to 255); every other key is serialised into
  the `metadata` column. Actor (`uid`), `timestamp`, `ip_address`, `user_agent` are captured
  automatically. **All of it, including `channel`, is covered by the hash** — a row cannot be
  re-attributed after the fact.
- **`logKeyed(...)`** — same shape, but **throws `AuditChainSigningUnavailableException` and writes
  nothing** unless HMAC signing will actually apply (a resolvable non-empty key). The key is
  re-checked inside the mutex so a key that vanishes mid-append cannot yield an unkeyed row. Use from
  evidence-required consumers that must not accept an unsigned row. Ordinary auditing should use
  `log()`, which prefers writing an unsigned row over dropping the record.
- **`signingStatus(): array{keyed: bool, key_id: string}`** — cheap precondition check.

**Write path (`AuditChainLogger::append()`):** resolves the key and encodes/encrypts metadata
*outside* the lock, then opens a transaction and takes the append mutex — `SELECT … FOR UPDATE` plus
an `UPDATE` on the singleton `audit_chain_mutex` row (id 1) — held until the caller's **root**
transaction commits/rolls back, so read-latest-then-insert cannot fork the chain. **A missing mutex
row refuses the write** (throws `AuditChainAppendException`); deadlock/lock-timeout propagate as DB
exceptions — a fork is treated as worse than a dropped row. A configured-but-unresolvable key does
**not** silently fall through: the row is written unkeyed, an error is logged, and
`hook_requirements()` flags it at ERROR. `key_id` records which key actually signed the row and
`encryption_profile` which profile encrypted the metadata — **neither is covered by the hash**
(advisory only). Set `stream_enabled` to also emit each row to the `audit_chain` logger channel.

## Request-scoped collector — do not log per access check

Hooks like `hook_entity_field_access()` fire per field, per entity, per render. Writing a row each
time floods a chain you cannot un-flood. Use `audit_chain.collector`
(`AuditChainCollector::collect($channel, $operation, $metadata, ?$dedupeKey)`):

- Deduplicates per request; **first occurrence wins** (metadata kept, later ones discarded, not
  merged). Default dedupe key = `channel:operation:entity_type:id`.
- `AuditChainFlushSubscriber` drains it once at `kernel.terminate` (after the response, so the mutex
  stays off the request critical path). `flush()` clears the buffer before writing, so it is
  safe to call twice and cannot double-write. `count()` returns the pending (deduped) count.

## Verifying — `verify(): array`

Walks the whole chain in `id` order (no channel argument — the chain is global). Returns an additive
verdict: `ok, broken_at, reason, unkeyed_rows, unkeyed_through, verified_from, sealed_through,
seal_intact`. `reason` is one of the `AuditChainLogger::REASON_*` constants:

- **`tampered`** — a row's content or ordering no longer matches its hash (`broken_at` names the row).
  Continuity is checked first (`prev_hash` must equal the previous chained row's hash).
- **`written_unkeyed`** — rows are intact and in order but were hashed **without** the configured key
  (usually an unresolvable Key entity at write time). A different diagnosis and remedy than tampering.
- **`seal_broken`** — a sealed prefix's stored hashes changed since sealing (tampering of history).
- **`seal_foreign`** — sealed prefix digest matches but its MAC cannot be authenticated with a local
  key (expected after a cross-environment DB refresh; fail-closed but not evidence of change).

Integrity is checked with `matchesAnyKey()`, which tries **every** key the site holds (current +
`previous_hash_keys`) with `hash_equals`. The row's own `key_id` column only orders which key is
*tried first* — it is never trusted as authority, because it is not covered by the row hash. Rows
with an empty `row_hash` predate chaining and are skipped (the segment restarts with an empty
`prev_hash`). `channel` is omitted from the canonical payload when empty so pre-module migrated rows
keep verifying against their original hashes.

## Seal / re-encrypt / prune / decode

- **`sealPrefix(int $throughId, string $reason): array`** — records a site-local genesis anchor
  (in state, key `audit_chain.seal`, MAC'd with the **active** key) over stored `row_hash` values for
  ids ≤ `throughId`. Refuses if no active key resolves, if any covered row still verifies under a
  configured key (would hide good history), on bad input, or when a recovery record already freezes
  history. Writes its own audit row (`channel=audit_chain`, `operation=prefix_sealed`). Post-seal
  verification skips content recompute for the prefix but detects any change to its hashes.
- **`getSeal(): ?array`** — the active seal record (validated shape) or NULL.
- **`reencrypt(string $from, string $to, int $limit = 0): array`** — rewrites `metadata` +
  `encryption_profile` for rows on `$from` to `$to`. **Never touches `row_hash`/`prev_hash`** (the
  chain covers plaintext). Idempotent; refuses if either profile will not load, they are equal, or a
  recovery record exists. Held under the append lock (`withChainLock()`).
- **`decodeMetadata(string $stored, string $profile = ''): array`** — decrypts using the row's own
  profile first, then the configured one, then plaintext JSON.
- **`prune(string $channel, int $retentionDays): int`** — **deletes nothing** and always returns 0.
  Because channels share one chain, deleting a channel's expired rows would break continuity or a
  seal; instead it sets state `audit_chain.retention_refused` and logs a warning, surfaced on the
  status report. Export off-system if history must be shed.
